--- a/FrontEnd/barberapp/src/components/assets/styles/styles.css
+++ b/FrontEnd/barberapp/src/components/assets/styles/styles.css
@@ -70,6 +70,12 @@ h2{
   padding-top: 4rem;
   margin-top: 1rem;
 }
+h3{
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  width: 100%;
+  text-align: center;
+}
 
 button{
   font-family: 'Bebas Neue', sans-serif;
@@ -111,6 +117,4 @@ button{
   margin-bottom: 3rem;
 }
 
-#ubicacion img{
-  max-width: 100%;
-}
+
