--- a/FrontEnd/barberapp/src/components/ubicacion/style.css
+++ b/FrontEnd/barberapp/src/components/ubicacion/style.css
@@ -3,8 +3,8 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100%;
+    height: 50rem;
+    max-width: 100%;
 }
 h2{
     padding: 0;
