--- a/FrontEnd/barberapp/src/components/assets/styles/styles.css
+++ b/FrontEnd/barberapp/src/components/assets/styles/styles.css
@@ -158,3 +158,23 @@ button{
 .img-text p{
   margin: 0;
 }
+
+#btn-finalizar{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#btn-finalizar button{
+  width: 10rem;
+  border: 1px solid grey;
+  background-color: #fff;
+  padding-top: 0;
+  letter-spacing: .2rem;
+  cursor: pointer;
+}
+#btn-finalizar button:hover{
+  border: 1px solid orange;
+  background-color: orange;
+  color: #fff;
+}
