--- a/FrontEnd/barberapp/src/components/assets/styles/styles.css
+++ b/FrontEnd/barberapp/src/components/assets/styles/styles.css
@@ -160,6 +160,7 @@ button{
 }
 
 #btn-finalizar{
+  font-family: 'Bebas Neue', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
