--- a/FrontEnd/barberapp/src/components/assets/styles/styles.css
+++ b/FrontEnd/barberapp/src/components/assets/styles/styles.css
@@ -63,7 +63,7 @@ h3{
   text-align: center;
 }
 
-button{
+.button{
   font-family: 'Bebas Neue', sans-serif;
   font-size: 1.5rem;
   text-align: center;
